--- a/README
+++ b/README
@@ -1,2 +1,2 @@
 MWget is a "MultiLine" wget for all POSTX System!
-在shell下运行没有问题，但是在crontab后台运行会报Segmentation fault的错误
+解决在shell下运行没有问题，但是在crontab后台运行会报Segmentation fault的错误
